# xtrack_simulator

./: .gitignore  CMakeLists.txt  lv_conf.h  main.cpp  readme.md
USER/App/Config/: Config.h
USER/App/Utils/ArduinoJson/src/: CMakeLists.txt
lv_fs_if/: lv_fs_pc.c
